trivial refactor: fix spotbug warnings